Update z-index of modal to prevent paypal buttons from overlapping

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -3,7 +3,7 @@
 .modal {
   position: fixed;
   inset: 0;
-  z-index: 11;
+  z-index: 110;
   display: flex;
   justify-content: center;
   align-items: center;
